kubernetes/kanboard/02-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kanboard
  labels:
    app: kanboard

spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: kanboard
