kubernetes/kanboard/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kanboard
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: kanboard
