kubernetes/kanboard/04-ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kanboard
  labels:
    app: kanboard

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kb.zzd.ai`)
      kind: Rule
      services:
        - name: kanboard
          port: 80
      middlewares:
        - name: forward-auth
  tls:
    certResolver: default
