kubernetes/kanboard/ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kanboard-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kb.#HOMELAB_DOMAIN#`)
      kind: Rule
      services:
        - name: kanboard
          port: 80
      middlewares:
        - name: https-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kanboard-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kb.#HOMELAB_DOMAIN#`)
      kind: Rule
      services:
        - name: kanboard
          port: 80
      middlewares:
        - name: forward-auth
  tls:
    certResolver: default
